kubernetes/kubectl/application/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: connexion-app-deploy
  namespace: development
  labels:
    app: connexion-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: connexion-app
  template:
    metadata:
      labels:
        app: connexion-app
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - connexion-app
                topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: connexion
        image: witoldgren/connexion-app:0.1
        imagePullPolicy: Always
        args: ["/gunicorn.sh"]
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 15
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
        ports:
          - name: connexion-tcp
            containerPort: 5000
        resources:
          requests:
            memory: "128M"
            cpu: "250m"
          limits:
            memory: "256M"
            cpu: "500m"
